Fix letter spacing for h1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ ul {
     padding: 0;
 }
 h1 {
-    letter-spacing: -5px;
+    letter-spacing: -2px;
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'Playfair Display', serif;
